--- a/app/src/main/res/layout/activity_start_avtivity.xml
+++ b/app/src/main/res/layout/activity_start_avtivity.xml
@@ -20,8 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ButtonText"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="288dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="288dp" />
 
 </android.support.constraint.ConstraintLayout>
