--- a/app/src/main/res/layout/activity_start_avtivity.xml
+++ b/app/src/main/res/layout/activity_start_avtivity.xml
@@ -33,5 +33,13 @@
             android:layout_toEndOf="@+id/button"
             android:text="@string/StartChat"
             tools:ignore="MissingConstraints" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weather"
+            android:id="@+id/button4"
+            android:layout_below="@+id/button3"
+            android:layout_alignStart="@+id/button3" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
